--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "firebase": "^10.7.2",
     "next": "14.1.0",
